<resources>
    <string name="app_name">HealthManagement</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_signout">Signout</string>
    <string name="action_search">Search</string>
    <string name="medication">Medication</string>
    <string name="diet">Diet</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="communication">Emergency Contact</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_medication">MedicationActivity</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="title_activity_communication">CommunicationActivity</string>
    <string name="title_activity_vital_signs">VitalSignsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="invalid_email">Enter valid email address</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_name">Full name cannot be empty</string>

    <string name="add_medicine_link"><u>Add New Medicine</u></string>
    <string name="edit_emergency_link"><u>Edit Emergency Contact</u></string>
    <string name="add_time_link"><u>Add Time</u></string>
    <string name="reset_link"><u>Reset</u></string>

    <string name="defaultVal">Default</string>
    <string name="camera_permission_msg">Please grant permission to access camera</string>
    <string name="medication_subtitle">Track your medicine consumption</string>
    <string name="vital_signs_subtitle">Track your glucose, BP etc.</string>
    <string name="home_add_text">Add</string>
    <string name="home_view_text">View</string>
    <string name="communication_subtitle">Manage emergency contacts</string>
    <string name="notes">Notes</string>
    <string name="notes_subtitle">Create, edit, delete notes</string>
    <string name="diet_subtitle">Track diet for each day</string>

    <string name="search_medication_hint">Search Medication</string>

    <string-array name="numbers_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
