<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_medication"
            android:icon="@drawable/ic_menu_medication"
            android:title="@string/medication" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_menu_diet"
            android:title="@string/diet" />
        <item
            android:id="@+id/nav_vital_signs"
            android:icon="@drawable/ic_menu_vital_signs"
            android:title="@string/vital_signs" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="Share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="Send" />

    </group>
</menu>
