<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.along.android.healthmanagement.NavigationDrawerActivity"
    tools:showIn="@layout/app_bar_navigation_drawer">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/medication"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorTile1"
            android:layout_margin="5dp"
            android:textColor="@color/eeeeee"
            android:layout_weight=".5" />

        <Button
            android:text="@string/diet"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorTile2"
            android:layout_margin="5dp"
            android:textColor="@color/eeeeee"
            android:layout_weight=".5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1">

        <Button
            android:text="@string/vital_signs"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorTile3"
            android:layout_margin="5dp"
            android:textColor="@color/eeeeee"
            android:layout_weight=".5" />

        <Button
            android:text="@string/communication"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorTile4"
            android:layout_margin="5dp"
            android:textColor="@color/eeeeee"
            android:layout_weight=".5" />
    </LinearLayout>
</RelativeLayout>
